--- a/B2/index.html
+++ b/B2/index.html
@@ -10,12 +10,18 @@
 </head>
 <body>
 <div class="wrapper">
-    <div class="one">One</div>
-    <div class="two">Two</div>
-    <div class="three">Three</div>
-    <div class="four">Four</div>
-    <div class="five">Five</div>
-    <div class="six">Six</div>
+    <div style="grid-area: site-title">Site Title</div>
+    <div style="grid-area: nav-1;">Nav1</div>
+    <div style="grid-area: nav-2;">Nav2</div>
+    <div style="grid-area: nav-3;">Nav3</div>
+    <div style="grid-area: post-title;">Post Title</div>
+    <div style="grid-area: sidebar;">Side bar</div>
+    <div style="grid-area: post-meta;">Post meta</div>
+    <div style="grid-area: main-content;">Main content</div>
+    <div style="grid-area: main-content-image;">Main content image</div>
+    <div style="grid-area: ads;">Ads</div>
+    <div style="grid-area: other-stuffs;">Other stuffs</div>
+    <div style="grid-area: footer;">Footer</div>
 </div>
 </body>
 </html>
