--- a/B9/index.html
+++ b/B9/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Contact Form">
 
-    <link href="vendor-css/normalize.min.css" rel="stylesheet">
+    <link href="normalize.min.css" rel="stylesheet">
     <link href="main.css" rel="stylesheet">
 </head>
 
@@ -18,24 +18,25 @@
 <form enctype="multipart/form-data" name="field" class="form" method="post">
     <section class="form__section">
         <h2 class="form__heading">E mail form</h2>
-
         <fieldset class="form__fieldset">
             <legend class="form__legend">User data</legend>
-            <div class="form__fieldwrap form__fieldwrap--input">
-                <label for="field_firstname" class="form__label">First name</label>
-                <input class="form__input" id="field_firstname" type="text" name="firstname">
-            </div>
-            <div class="form__fieldwrap form__fieldwrap--input">
-                <label for="field_lastname" class="form__label">Last name</label>
-                <input required class="form__input" id="field_lastname" type="text" name="lastname">
-            </div>
-            <div class="form__fieldwrap form__fieldwrap--input">
-                <label for="field_telephone" class="form__label">Telephone</label>
-                <input pattern="^(\+\d{1,4}|0+\d{1,5}|\(\d{1,5})[\d\s\/\(\)-]*\d+$" class="form__input" id="field_telephone" type="tel" name="telephone">
-            </div>
-            <div class="form__fieldwrap form__fieldwrap--input">
-                <label for="field_e_mail" class="form__label">E mail</label>
-                <input required="required" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,15}$" class="form__input" id="field_e_mail" type="email" name="e_mail">
+            <div class="container">
+                <div class="form__fieldwrap form__fieldwrap--input">
+                    <label for="field_firstname" class="form__label">First name</label>
+                    <input class="form__input" id="field_firstname" type="text" name="firstname">
+                </div>
+                <div class="form__fieldwrap form__fieldwrap--input">
+                    <label for="field_lastname" class="form__label">Last name</label>
+                    <input required class="form__input" id="field_lastname" type="text" name="lastname">
+                </div>
+                <div class="form__fieldwrap form__fieldwrap--input">
+                    <label for="field_telephone" class="form__label">Telephone</label>
+                    <input pattern="^(\+\d{1,4}|0+\d{1,5}|\(\d{1,5})[\d\s\/\(\)-]*\d+$" class="form__input" id="field_telephone" type="tel" name="telephone">
+                </div>
+                <div class="form__fieldwrap form__fieldwrap--input">
+                    <label for="field_e_mail" class="form__label">E mail</label>
+                    <input required="required" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,15}$" class="form__input" id="field_e_mail" type="email" name="e_mail">
+                </div>
             </div>
         </fieldset>
 
